
cc_library(
	name = "units",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_lambda//:lambda",
		"@com_github_bazelboost_math//:math",
		"@com_github_bazelboost_integer//:integer"
	],
)
